Finish parser v0.1; cli

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ smtlib = "0.2.0"
 smtlib-lowlevel = "0.2.0"
 chumsky = { version =  "1.0.0-alpha.7", features = ["pratt", "label"]}
 logos = "0.14.0"
+clap =  { version = "4.5.9", features = ["derive"] }
